--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Markdown reader for static pages.",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +24,13 @@
   },
   "homepage": "https://github.com/staticpagesjs/markdown-reader#readme",
   "dependencies": {
+    "@static-pages/incremental": "0.0.1",
     "front-matter": "^4.0.2",
     "glob": "^7.1.7"
+  },
+  "devDependencies": {
+    "@types/glob": "^7.1.4",
+    "@types/node": "^16.9.3",
+    "typescript": "^4.4.3"
   }
 }
