--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Markdown reader for static pages.",
   "main": "index.js",
   "scripts": {
+    "prepack": "npm run build",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
