--- a/package.json
+++ b/package.json
@@ -2,11 +2,25 @@
   "name": "@static-pages/markdown-reader",
   "version": "0.1.6",
   "description": "Markdown reader for static pages.",
-  "main": "index.js",
+  "type": "module",
+  "main": "./cjs/index.js",
+  "module": "./esm/index.js",
+  "browser": "./esm/index.js",
+  "exports": {
+    ".": {
+      "require": "./cjs/index.js",
+      "default": "./esm/index.js"
+    }
+  },
   "scripts": {
     "prepack": "npm run build",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --outDir cjs --module commonjs",
+    "watch:esm": "tsc --watch",
+    "watch:cjs": "tsc --watch --outDir cjs --module commonjs",
+    "test": "eslint src && npm run build && jest",
+    "clean": "rimraf esm cjs/*.?s"
   },
   "repository": {
     "type": "git",
@@ -32,6 +46,11 @@
   "devDependencies": {
     "@types/glob": "^7.1.4",
     "@types/node": "^16.9.3",
-    "typescript": "^4.4.3"
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.2.0",
+    "jest": "^27.3.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.4.4"
   }
 }
